# Universidad-2

./: .gitignore  README.md
C1 S1 Competencias Profesionales/Reportaje/: antes.md
C2 S1 Procesadores del lenguaje/Apuntes segunda parte PDL/: cap1.bib  desordenados.bib
C2 S1 Procesadores del lenguaje/Bloque 1/: .gitignore
C2 S1 Procesadores del lenguaje/Bloque 2/: info.data
C2 S1 Tecnologia de Computadores/: .gitignore
C2 S2 Ingenieria del software/Apuntes (LaTex)/: .gitignore  main.tex
C2 S2 Tecnologia de Computadores/: .gitignore
C2S1 Procesadores del lenguaje/Apuntes segunda parte PDL/: intros.bib  main.tex
C2S1 Procesadores del lenguaje/Bloque 1/: .gitignore
C2S1 Procesadores del lenguaje/Bloque 2/: .gitignore  analisis de datos.xlsx
C2S1 Procesadores del lenguaje/Practica 2/: componente_lexico.py  lexico.py  test_traductor_postfijo.py  traductor_postfijo.py
C2S2 Ingenieria del software/Apuntes (LaTex)/: .gitignore
C2S2 Ingenieria del software/Ejercicios/: .gitignore
C2S2 Ingeniería del software/Apuntes (LaTex)/: main.tex
C3 S1 BackEnd/: package-lock.json
C3 S1 BackEnd/Clase_repaso/: package-lock.json  package.json
C3 S1 Sistemas Empotrados/ProyectoSistemasEmpotrados/src/main/: CMakeLists.txt  cliente_tcp.cpp  cliente_tcp.h  conectividad_cliente_tcp.cpp  conectividad_cliente_tcp.h  constantes.h  leds.cpp  leds.h  main.ino  tipos.h  wifi_scanner.cpp  wifi_scanner.h
C3 S2 Desarrollo de interfaces web/: README.md
C3 S2 Sistemas Distribuidos/: codigozip
C3 S2 Sistemas Fiables en Tiempo Real/: .gitignore  Plantilla_actividades.docx
(+628 files in other folders)
